--- a/wsu-style.css
+++ b/wsu-style.css
@@ -96,11 +96,16 @@ body {
     
 }
 
+.wsu-header-unit {
+    background-color: #fff;
+    height: 120px;
+}
+
+
 .wsu-header-unit__inner {
     position: relative;
     z-index: 100;
     background-color: #fff;
-    height: 120px;
 }
 
 .wsu-header-unit__inner::after {
@@ -153,7 +158,7 @@ body {
 }
 
 .wsu-logo-lockup {
-    display: block;
+    display: inline-block;
     color: #3f3f3f;
     text-decoration: none;
 }
@@ -237,7 +242,6 @@ a.wsu-link--external::after {
 }
 
 .wsu-site-content {
-    margin-left: 280px;
     box-sizing: border-box;
     padding: 2rem 2rem 3rem;
 }
@@ -270,6 +274,20 @@ a.wsu-link--external::after {
 
 .wsu-navigation-vertical button {
     display: none;
+    font-size: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.wsu-navigation-vertical button::before {
+    content: "\f12a";
+    font-family: wsu-icons;
+    font-size: 1.125rem;
+    font-weight: 500;
+    height: 110px;
+    line-height: 110px;
+    display: block;
 }
 
 .wsu-navigation-vertical a {
@@ -336,6 +354,102 @@ a.wsu-link--external::after {
     height: 60px;
     line-height: 60px;
     color: #f7f7f7;
+}
+
+@media screen and (max-width: 1260px ) {
+
+    .wsu-utility {
+        display: none;
+    }
+
+    .wsu-site-footer__inner,
+    .wsu-global-footer__inner,
+    .wsu-site-content {
+        margin-left: 0px;
+    }
+
+    .wsu-logo-lockup__icon-wrapper .wsu-coug-head {
+        height: 70px;
+        width: 70px;
+    }
+
+    .wsu-navigation-vertical {
+        top: 145px;
+        right: -280px;
+        left: auto;
+        padding-top: 60px;
+        z-index: 200;
+        border-left: 2px solid #e5e5e5;
+        border-top: 2px solid #e5e5e5;
+    }
+
+    .wsu-navigation-vertical .wsu-menu {
+        position: absolute;
+        top: -110px;
+        left: -90px;
+        height: 110px;
+        width: 90px;
+        display: block;
+    }
+
+    .wsu-navigation-vertical:focus,
+    .wsu-navigation-vertical:focus-within,
+    .wsu-navigation-vertical:hover {
+        right: 0;
+    }
+
+    .wsu-navigation-vertical:focus .wsu-menu,
+    .wsu-navigation-vertical:focus-within .wsu-menu,
+    .wsu-navigation-vertical:hover .wsu-menu {
+        right: 0;
+        left: auto;
+    }
+
+
+}
+
+@media screen and (max-width: 860px ) {
+
+    .wsu-logo-lockup__icon-wrapper .wsu-coug-head {
+        height: 50px;
+        width: 50px;
+    }
+
+    .wsu-header-unit {
+        background-color: #fff;
+        height: 110px;
+    }
+
+    .wsu-logo-lockup__title {
+        font-size: 2em;
+    }
+    
+
+
+}
+
+@media screen and (max-width: 860px ) {
+
+    .wsu-header-unit {
+        background-color: #fff;
+        height: 90px;
+    }
+
+
+    .wsu-logo-lockup__title {
+        font-size: 1.5em;
+    }
+
+    .wsu-site-footer__inner {
+        margin-right: 0;
+    }
+
+    .wsu-site-footer .wsu-coug-head {
+        display: none;
+    }
+    
+
+
 }
 
 
